@@ -1,7 +1,5 @@
 package com.dolpin.domain.place.service.query;
 
-import com.dolpin.domain.moment.repository.MomentRepository;
-import com.dolpin.domain.place.client.PlaceAiClient;
 import com.dolpin.domain.place.dto.response.PlaceCategoryResponse;
 import com.dolpin.domain.place.dto.response.PlaceDetailResponse;
 import com.dolpin.domain.place.dto.response.PlaceSearchResponse;
@@ -23,44 +21,110 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 import reactor.core.publisher.Mono;
 
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.verifyNoInteractions;
 
-// 1. 메인 PlaceQueryServiceImpl 테스트 (수정됨)
 @ExtendWith(MockitoExtension.class)
-@DisplayName("PlaceQueryServiceImpl 통합 테스트 - 리팩토링 후")
+@DisplayName("PlaceQueryServiceImpl 테스트 - Template Method & Strategy Pattern 적용")
 class PlaceQueryServiceImplTest {
-
-    // ============= 리팩토링된 의존성들 =============
-
-    // 기존 의존성들
-    @Mock private PlaceRepository placeRepository;
-    @Mock private PlaceAiClient placeAiClient;
-    @Mock private MomentRepository momentRepository;
-    @Mock private PlaceBookmarkQueryService bookmarkQueryService;
-    @Mock private PlaceCacheService placeCacheService;
-
-    // 1단계: Template Method 구현체들
-    @Mock private FullPlaceDetailQuery fullPlaceDetailQuery;
-    @Mock private SimplePlaceDetailQuery simplePlaceDetailQuery;
-
-    // 2단계: Strategy Factory
-    @Mock private PlaceSearchStrategyFactory placeSearchStrategyFactory;
-    @Mock private PlaceSearchStrategy mockSearchStrategy;
 
     @InjectMocks
     private PlaceQueryServiceImpl placeQueryService;
 
+    // Repository
+    @Mock
+    private PlaceRepository placeRepository;
+
+    // Cache Service
+    @Mock
+    private PlaceCacheService placeCacheService;
+
+    // Template Method 구현체들
+    @Mock
+    private FullPlaceDetailQuery fullPlaceDetailQuery;
+
+    @Mock
+    private SimplePlaceDetailQuery simplePlaceDetailQuery;
+
+    // Strategy Pattern
+    @Mock
+    private PlaceSearchStrategyFactory placeSearchStrategyFactory;
+
+    @Mock
+    private PlaceSearchStrategy mockSearchStrategy;
+
     @Nested
-    @DisplayName("Place 상세 조회 테스트 (Template Method 적용)")
+    @DisplayName("카테고리 조회 테스트")
+    class CategoryTest {
+
+        @Test
+        @DisplayName("카테고리 조회 성공 - 캐시 히트")
+        void getAllCategories_CacheHit_Success() {
+            // given
+            List<String> cachedCategories = Arrays.asList("카페", "레스토랑", "바");
+            given(placeCacheService.getCachedCategories()).willReturn(cachedCategories);
+
+            // when
+            PlaceCategoryResponse result = placeQueryService.getAllCategories();
+
+            // then
+            assertThat(result.getCategories()).hasSize(3);
+            assertThat(result.getCategories()).containsExactly("카페", "레스토랑", "바");
+
+            // 캐시 히트이므로 Repository 호출 없음
+            verifyNoInteractions(placeRepository);
+        }
+
+        @Test
+        @DisplayName("카테고리 조회 성공 - 캐시 미스")
+        void getAllCategories_CacheMiss_Success() {
+            // given
+            List<String> dbCategories = Arrays.asList("카페", "레스토랑", "바", "베이커리");
+            given(placeCacheService.getCachedCategories()).willReturn(null);
+            given(placeRepository.findDistinctCategories()).willReturn(dbCategories);
+
+            // when
+            PlaceCategoryResponse result = placeQueryService.getAllCategories();
+
+            // then
+            assertThat(result.getCategories()).hasSize(4);
+            assertThat(result.getCategories()).containsExactly("카페", "레스토랑", "바", "베이커리");
+
+            verify(placeRepository).findDistinctCategories();
+            verify(placeCacheService).cacheCategories(dbCategories);
+        }
+
+        @Test
+        @DisplayName("카테고리 조회 - 빈 결과")
+        void getAllCategories_EmptyResult_Success() {
+            // given
+            given(placeCacheService.getCachedCategories()).willReturn(null);
+            given(placeRepository.findDistinctCategories()).willReturn(Collections.emptyList());
+
+            // when
+            PlaceCategoryResponse result = placeQueryService.getAllCategories();
+
+            // then
+            assertThat(result.getCategories()).isEmpty();
+            verify(placeCacheService).cacheCategories(Collections.emptyList());
+        }
+    }
+
+    @Nested
+    @DisplayName("Place 상세 조회 테스트 - Template Method Pattern")
     class PlaceDetailTest {
 
         @Test
-        @DisplayName("일반 사용자 상세 조회 - FullPlaceDetailQuery 사용")
+        @DisplayName("로그인 사용자 상세 조회 - FullPlaceDetailQuery 사용")
         void getPlaceDetail_WithUser_UsesFullQuery() {
             // given
             Long placeId = 1L;
@@ -75,8 +139,10 @@ class PlaceQueryServiceImplTest {
 
             // then
             assertThat(result).isEqualTo(expectedResponse);
+            assertThat(result.getIsBookmarked()).isTrue(); // 북마크 정보 포함
+
             verify(fullPlaceDetailQuery).getPlaceDetail(placeId, userId);
-            verifyNoInteractions(simplePlaceDetailQuery); // 다른 구현체는 사용하지 않음
+            verifyNoInteractions(simplePlaceDetailQuery);
         }
 
         @Test
@@ -94,33 +160,93 @@ class PlaceQueryServiceImplTest {
 
             // then
             assertThat(result).isEqualTo(expectedResponse);
+            assertThat(result.getIsBookmarked()).isNull(); // 북마크 정보 없음
+
             verify(simplePlaceDetailQuery).getPlaceDetail(placeId, null);
-            verifyNoInteractions(fullPlaceDetailQuery); // 다른 구현체는 사용하지 않음
+            verifyNoInteractions(fullPlaceDetailQuery);
         }
 
         private PlaceDetailResponse createMockDetailResponse() {
+            Map<String, Object> location = Map.of(
+                    "type", "Point",
+                    "coordinates", new double[]{126.9780, 37.5665}
+            );
+
+            PlaceDetailResponse.Schedule schedule = PlaceDetailResponse.Schedule.builder()
+                    .day("mon")
+                    .hours("09:00~22:00")
+                    .breakTime("15:00~16:00")
+                    .build();
+
+            PlaceDetailResponse.OpeningHours openingHours = PlaceDetailResponse.OpeningHours.builder()
+                    .status("영업중")
+                    .schedules(List.of(schedule))
+                    .build();
+
+            PlaceDetailResponse.Menu menu = PlaceDetailResponse.Menu.builder()
+                    .name("아메리카노")
+                    .price(4500)
+                    .build();
+
             return PlaceDetailResponse.builder()
                     .id(1L)
                     .name("테스트 카페")
+                    .address("서울시 강남구 테헤란로 123")
+                    .thumbnail("image.jpg")
+                    .location(location)
+                    .keywords(Arrays.asList("커피", "카페", "디저트"))
+                    .description("맛있는 커피를 파는 카페")
+                    .phone("02-1234-5678")
                     .isBookmarked(true) // 북마크 정보 포함
+                    .openingHours(openingHours)
+                    .menu(Arrays.asList(menu))
                     .build();
         }
 
         private PlaceDetailResponse createMockDetailResponseWithoutBookmark() {
+            Map<String, Object> location = Map.of(
+                    "type", "Point",
+                    "coordinates", new double[]{126.9780, 37.5665}
+            );
+
+            PlaceDetailResponse.Schedule schedule = PlaceDetailResponse.Schedule.builder()
+                    .day("mon")
+                    .hours("09:00~22:00")
+                    .breakTime("15:00~16:00")
+                    .build();
+
+            PlaceDetailResponse.OpeningHours openingHours = PlaceDetailResponse.OpeningHours.builder()
+                    .status("영업중")
+                    .schedules(List.of(schedule))
+                    .build();
+
+            PlaceDetailResponse.Menu menu = PlaceDetailResponse.Menu.builder()
+                    .name("아메리카노")
+                    .price(4500)
+                    .build();
+
             return PlaceDetailResponse.builder()
                     .id(1L)
                     .name("테스트 카페")
+                    .address("서울시 강남구 테헤란로 123")
+                    .thumbnail("image.jpg")
+                    .location(location)
+                    .keywords(Arrays.asList("커피", "카페", "디저트"))
+                    .description("맛있는 커피를 파는 카페")
+                    .phone("02-1234-5678")
                     .isBookmarked(null) // 북마크 정보 없음
+                    .openingHours(openingHours)
+                    .menu(Arrays.asList(menu))
                     .build();
         }
     }
 
     @Nested
-    @DisplayName("검색 테스트 (Strategy Pattern 적용)")
-    class SearchTest {
+    @DisplayName("Place 검색 테스트 - Strategy Pattern")
+    class PlaceSearchTest {
 
         @Test
-        @DisplayName("AI 검색 - PlaceSearchStrategy 팩토리 사용")
+        @DisplayName("AI 검색 - Strategy Factory 사용")
         void searchPlacesAsync_WithQuery_UsesAiStrategy() {
             // given
             String query = "맛있는 파스타";
@@ -129,8 +255,11 @@ class PlaceQueryServiceImplTest {
             Long userId = 1L;
 
             List<PlaceSearchResponse.PlaceDto> mockPlaces = createMockPlacesList();
+            PlaceSearchResponse expectedResponse = PlaceSearchResponse.builder()
+                    .places(mockPlaces)
+                    .total(mockPlaces.size())
+                    .build();
 
-            // Strategy Factory가 AI 전략을 반환하도록 설정
             given(placeSearchStrategyFactory.getStrategy(PlaceSearchType.AI_QUERY))
                     .willReturn(mockSearchStrategy);
             given(mockSearchStrategy.search(any(PlaceSearchContext.class)))
@@ -144,13 +273,12 @@ class PlaceQueryServiceImplTest {
             assertThat(result.getTotal()).isEqualTo(2);
             assertThat(result.getPlaces()).hasSize(2);
 
-            // Strategy Factory 사용 확인
             verify(placeSearchStrategyFactory).getStrategy(PlaceSearchType.AI_QUERY);
             verify(mockSearchStrategy).search(any(PlaceSearchContext.class));
         }
 
         @Test
-        @DisplayName("카테고리 검색 - PlaceSearchStrategy 팩토리 사용")
+        @DisplayName("카테고리 검색 - Strategy Factory 사용")
         void searchPlacesAsync_WithCategory_UsesCategoryStrategy() {
             // given
             String category = "카페";
@@ -160,7 +288,6 @@ class PlaceQueryServiceImplTest {
 
             List<PlaceSearchResponse.PlaceDto> mockPlaces = createMockPlacesList();
 
-            // Strategy Factory가 카테고리 전략을 반환하도록 설정
             given(placeSearchStrategyFactory.getStrategy(PlaceSearchType.CATEGORY))
                     .willReturn(mockSearchStrategy);
             given(mockSearchStrategy.search(any(PlaceSearchContext.class)))
@@ -172,16 +299,16 @@ class PlaceQueryServiceImplTest {
 
             // then
             assertThat(result.getTotal()).isEqualTo(2);
+            assertThat(result.getPlaces()).hasSize(2);
 
-            // Strategy Factory 사용 확인
             verify(placeSearchStrategyFactory).getStrategy(PlaceSearchType.CATEGORY);
             verify(mockSearchStrategy).search(any(PlaceSearchContext.class));
         }
 
         @Test
-        @DisplayName("잘못된 파라미터 - 검증 실패")
-        void searchPlacesAsync_WithInvalidParams_ThrowsException() {
-            // given - query와 category 둘 다 있는 경우 (잘못된 파라미터)
+        @DisplayName("검색 파라미터 검증 실패 - query와 category 모두 있음")
+        void searchPlacesAsync_InvalidParams_ThrowsException() {
+            // given - query와 category 둘 다 제공 (잘못된 파라미터)
             String query = "파스타";
             String category = "카페";
             Double lat = 37.5665;
@@ -196,15 +323,78 @@ class PlaceQueryServiceImplTest {
                     .hasMessageContaining("검색어와 카테고리 중 하나만 선택해주세요");
         }
 
+        @Test
+        @DisplayName("검색 파라미터 검증 실패 - query와 category 모두 없음")
+        void searchPlacesAsync_NoParams_ThrowsException() {
+            // given - query와 category 둘 다 없음
+            Double lat = 37.5665;
+            Double lng = 126.9780;
+            Long userId = 1L;
+
+            // when & then
+            Mono<PlaceSearchResponse> resultMono = placeQueryService.searchPlacesAsync(null, lat, lng, null, userId);
+
+            assertThatThrownBy(() -> resultMono.block())
+                    .isInstanceOf(BusinessException.class)
+                    .hasMessageContaining("검색어 또는 카테고리가 필요합니다");
+        }
+
+        @Test
+        @DisplayName("검색 결과 없음")
+        void searchPlacesAsync_EmptyResult_ReturnsEmptyResponse() {
+            // given
+            String query = "존재하지않는장소";
+            Double lat = 37.5665;
+            Double lng = 126.9780;
+            Long userId = 1L;
+
+            given(placeSearchStrategyFactory.getStrategy(PlaceSearchType.AI_QUERY))
+                    .willReturn(mockSearchStrategy);
+            given(mockSearchStrategy.search(any(PlaceSearchContext.class)))
+                    .willReturn(Mono.just(Collections.emptyList()));
+
+            // when
+            Mono<PlaceSearchResponse> resultMono = placeQueryService.searchPlacesAsync(query, lat, lng, null, userId);
+            PlaceSearchResponse result = resultMono.block();
+
+            // then
+            assertThat(result.getTotal()).isEqualTo(0);
+            assertThat(result.getPlaces()).isEmpty();
+        }
+
+        @Test
+        @DisplayName("Strategy 에러 전파")
+        void searchPlacesAsync_StrategyError_PropagatesError() {
+            // given
+            String query = "테스트";
+            Double lat = 37.5665;
+            Double lng = 126.9780;
+            Long userId = 1L;
+
+            RuntimeException expectedException = new RuntimeException("Strategy 오류");
+            given(placeSearchStrategyFactory.getStrategy(PlaceSearchType.AI_QUERY))
+                    .willReturn(mockSearchStrategy);
+            given(mockSearchStrategy.search(any(PlaceSearchContext.class)))
+                    .willReturn(Mono.error(expectedException));
+
+            // when & then
+            Mono<PlaceSearchResponse> resultMono = placeQueryService.searchPlacesAsync(query, lat, lng, null, userId);
+
+            assertThatThrownBy(() -> resultMono.block())
+                    .isInstanceOf(RuntimeException.class)
+                    .hasMessage("Strategy 오류");
+        }
+
         private List<PlaceSearchResponse.PlaceDto> createMockPlacesList() {
-            return List.of(
+            return Arrays.asList(
                     PlaceSearchResponse.PlaceDto.builder()
                             .id(1L)
                             .name("테스트 카페1")
                             .thumbnail("image1.jpg")
                             .distance(100.0)
                             .momentCount(5L)
-                            .isBookmarked(false)
+                            .keywords(Arrays.asList("커피", "카페"))
+                            .isBookmarked(true)
                             .build(),
                     PlaceSearchResponse.PlaceDto.builder()
                             .id(2L)
@@ -212,52 +402,79 @@ class PlaceQueryServiceImplTest {
                             .thumbnail("image2.jpg")
                             .distance(200.0)
                             .momentCount(3L)
-                            .isBookmarked(true)
+                            .keywords(Arrays.asList("디저트", "카페"))
+                            .isBookmarked(false)
                             .build()
             );
         }
     }
 
     @Nested
-    @DisplayName("카테고리 조회 테스트 (기존 로직 유지)")
-    class CategoryTest {
+    @DisplayName("PlaceSearchContext 생성 테스트")
+    class PlaceSearchContextTest {
 
         @Test
-        @DisplayName("카테고리 목록 조회 - 캐시 히트")
-        void getAllCategories_WithCache_ReturnsFromCache() {
+        @DisplayName("AI 검색 Context 생성")
+        void createSearchContext_ForAiQuery_CreatesCorrectContext() {
             // given
-            List<String> cachedCategories = List.of("카페", "레스토랑", "바");
-            given(placeCacheService.getCachedCategories()).willReturn(cachedCategories);
+            String query = "맛있는 파스타";
+            Double lat = 37.5665;
+            Double lng = 126.9780;
+            Long userId = 1L;
+
+            given(placeSearchStrategyFactory.getStrategy(PlaceSearchType.AI_QUERY))
+                    .willReturn(mockSearchStrategy);
+            given(mockSearchStrategy.search(any(PlaceSearchContext.class)))
+                    .willAnswer(invocation -> {
+                        PlaceSearchContext context = invocation.getArgument(0);
+
+                        // Context 검증
+                        assertThat(context.getQuery()).isEqualTo(query);
+                        assertThat(context.getCategory()).isNull();
+                        assertThat(context.getLat()).isEqualTo(lat);
+                        assertThat(context.getLng()).isEqualTo(lng);
+                        assertThat(context.getUserId()).isEqualTo(userId);
+
+                        return Mono.just(Collections.emptyList());
+                    });
 
             // when
-            PlaceCategoryResponse result = placeQueryService.getAllCategories();
+            placeQueryService.searchPlacesAsync(query, lat, lng, null, userId).block();
 
             // then
-            assertThat(result.getCategories()).hasSize(3);
-            assertThat(result.getCategories()).containsExactlyInAnyOrder("카페", "레스토랑", "바");
-
-            verify(placeCacheService).getCachedCategories();
-            verifyNoInteractions(placeRepository); // DB 조회하지 않음
+            // mockSearchStrategy.search() 호출 시 Context 검증 완료
         }
 
         @Test
-        @DisplayName("카테고리 목록 조회 - 캐시 미스, DB 조회")
-        void getAllCategories_WithoutCache_QueriesDatabase() {
+        @DisplayName("카테고리 검색 Context 생성")
+        void createSearchContext_ForCategoryQuery_CreatesCorrectContext() {
             // given
-            List<String> dbCategories = List.of("카페", "레스토랑");
-            given(placeCacheService.getCachedCategories()).willReturn(null); // 캐시 미스
-            given(placeRepository.findDistinctCategories()).willReturn(dbCategories);
+            String category = "카페";
+            Double lat = 37.5665;
+            Double lng = 126.9780;
+            Long userId = 1L;
+
+            given(placeSearchStrategyFactory.getStrategy(PlaceSearchType.CATEGORY))
+                    .willReturn(mockSearchStrategy);
+            given(mockSearchStrategy.search(any(PlaceSearchContext.class)))
+                    .willAnswer(invocation -> {
+                        PlaceSearchContext context = invocation.getArgument(0);
+
+                        // Context 검증
+                        assertThat(context.getQuery()).isNull();
+                        assertThat(context.getCategory()).isEqualTo(category);
+                        assertThat(context.getLat()).isEqualTo(lat);
+                        assertThat(context.getLng()).isEqualTo(lng);
+                        assertThat(context.getUserId()).isEqualTo(userId);
+
+                        return Mono.just(Collections.emptyList());
+                    });
 
             // when
-            PlaceCategoryResponse result = placeQueryService.getAllCategories();
+            placeQueryService.searchPlacesAsync(null, lat, lng, category, userId).block();
 
             // then
-            assertThat(result.getCategories()).hasSize(2);
-            assertThat(result.getCategories()).containsExactlyInAnyOrder("카페", "레스토랑");
-
-            verify(placeCacheService).getCachedCategories();
-            verify(placeRepository).findDistinctCategories();
-            verify(placeCacheService).cacheCategories(dbCategories); // 캐시 저장
+            // mockSearchStrategy.search() 호출 시 Context 검증 완료
         }
     }
 }
